# Weather-Bot

./: README.md
weatherBot/: bot.py  openRouter.py  pyproject.toml  run_bot.py  weather.py
